Reload divisions on field type change

--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -9,13 +9,13 @@
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="radio" name="fieldType" id="doubleMaleRadio"
                  [value]="FieldType.MALE" formControlName="fieldType"
-                 (change)="resetDoubleDivisionName()">
+                 (change)="resetDoubleDivision()">
           <label class="form-check-label" for="doubleMaleRadio">Herren</label>
         </div>
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="radio" name="fieldType" id="doubleFemaleRadio"
                  [value]="FieldType.FEMALE" formControlName="fieldType"
-                 (change)="resetDoubleDivisionName()">
+                 (change)="resetDoubleDivision()">
           <label class="form-check-label" for="doubleFemaleRadio">Damen</label>
         </div>
       </div>
@@ -349,13 +349,13 @@
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="radio" name="fieldType" id="singleMaleRadio"
                  [value]="FieldType.MALE" formControlName="fieldType"
-                 (change)="resetSingleDivisionName()">
+                 (change)="resetSingleDivision()">
           <label class="form-check-label" for="singleMaleRadio">Herren</label>
         </div>
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="radio" name="fieldType" id="singleFemaleRadio"
                  [value]="FieldType.FEMALE" formControlName="fieldType"
-                 (change)="resetSingleDivisionName()">
+                 (change)="resetSingleDivision()">
           <label class="form-check-label" for="singleFemaleRadio">Damen</label>
         </div>
       </div>
