--- a/src/app/state/state.component.html
+++ b/src/app/state/state.component.html
@@ -1,20 +1,17 @@
+<ngx-spinner color="#E51D20" type="ball-spin-clockwise-fade"></ngx-spinner>
+
 <h1>Anmeldestatus</h1>
 <hr/>
 
-<div [ngSwitch]="!singleSteps.length && !doubleSteps.length && !mixedSteps.length">
-  <p *ngSwitchCase="true">Du bist noch für keine Disziplin angemeldet.</p>
-  <div *ngSwitchCase="false">
-    <fieldset *ngIf="singleSteps.length" class="border p-2">
-      <legend class="w-auto">Einzel</legend>
-      <app-tracker [steps]="singleSteps"></app-tracker>
-    </fieldset>
-    <fieldset *ngIf="doubleSteps.length" class="border p-2">
-      <legend class="w-auto">Doppel</legend>
-      <app-tracker [steps]="doubleSteps"></app-tracker>
-    </fieldset>
-    <fieldset *ngIf="mixedSteps.length" class="border p-2">
-      <legend class="w-auto">Mixed</legend>
-      <app-tracker [steps]="mixedSteps"></app-tracker>
-    </fieldset>
-  </div>
-</div>
+<h2>Angemeldete Einzel</h2>
+<hr align="left" class="w-50"/>
+<app-table [headers]="singleHeaders" [items]="singleRegistered"></app-table>
+
+<h2 class="mt-3">Angemeldete Doppel</h2>
+<hr align="left" class="w-50"/>
+<app-table [headers]="doubleHeaders" [items]="doubleRegistered"></app-table>
+
+<h2 class="mt-3">Angemeldete Mixeds</h2>
+<hr align="left" class="w-50"/>
+<app-table [headers]="mixedHeaders" [items]="mixedRegistered"></app-table>
+
