--- a/src/app/participants/participants.component.html
+++ b/src/app/participants/participants.component.html
@@ -3,96 +3,109 @@
 <h1>Teilnehmerlisten</h1>
 <hr/>
 
-<h2>Einzel</h2>
-<form class="mb-1" [formGroup]="singleForm">
-  <div class="form-group">
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="fieldType" id="singleMaleRadio"
-             [value]="FieldType.MALE" formControlName="fieldType"
-             (change)="resetSingleDivisionName();singleFilter()">
-      <label class="form-check-label" for="singleMaleRadio">Herren</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="fieldType" id="singleFemaleRadio"
-             [value]="FieldType.FEMALE" formControlName="fieldType"
-             (change)="resetSingleDivisionName();singleFilter()">
-      <label class="form-check-label" for="singleFemaleRadio">Damen</label>
-    </div>
-  </div>
-  <div class="form-inline form-group mr-3">
-    <label for="singleDivisions" class="mr-1">Spielklasse:</label>
-    <select id="singleDivisions" class="form-control" (change)="singleFilter()"
-            formControlName="divisionName">
-      <option *ngFor="let d of singleDivisions">{{d}}</option>
-    </select>
-  </div>
-</form>
-<hr align="left" class="w-25"/>
-<div class="d-flex flex-wrap w-100-sm">
-  <div class="d-flex flex-column mr-1 w-100-sm">
-    <h5>Starterliste</h5>
-    <app-table [headers]="singleHeaders" [items]="singleStarting"></app-table>
-  </div>
-  <div class="d-flex flex-column ml-1 w-100-sm" *ngIf="singleWaiting.length">
-    <h5>Warteliste</h5>
-    <app-table [headers]="singleHeaders" [items]="singleWaiting"></app-table>
-  </div>
-</div>
+<ng-container [ngSwitch]="registrations.length > 0">
+  <ng-container *ngSwitchCase="true">
 
-<h2 class="mt-3">Doppel</h2>
-<form class="mb-1" [formGroup]="doubleForm">
-  <div class="form-group">
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="fieldType" id="doubleMaleRadio"
-             [value]="FieldType.MALE" formControlName="fieldType"
-             (change)="resetDoubleDivisionName();doubleFilter()">
-      <label class="form-check-label" for="doubleMaleRadio">Herren</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="fieldType" id="doubleFemaleRadio"
-             [value]="FieldType.FEMALE" formControlName="fieldType"
-             (change)="resetDoubleDivisionName();doubleFilter()">
-      <label class="form-check-label" for="doubleFemaleRadio">Damen</label>
-    </div>
-  </div>
-  <div class="form-inline form-group mr-3">
-    <label for="doubleDivisions" class="mr-1">Spielklasse:</label>
-    <select id="doubleDivisions" class="form-control" (change)="doubleFilter()"
-            formControlName="divisionName">
-      <option *ngFor="let d of doubleDivisions">{{d}}</option>
-    </select>
-  </div>
-</form>
-<hr align="left" class="w-25"/>
-<div class="d-flex flex-wrap w-100-sm">
-  <div class="d-flex flex-column mr-1 w-100-sm">
-    <h5>Starterliste</h5>
-    <app-table [headers]="doubleHeaders" [items]="doubleStarting"></app-table>
-  </div>
-  <div class="d-flex flex-column ml-1 w-100-sm" *ngIf="doubleWaiting.length">
-    <h5>Warteliste</h5>
-    <app-table [headers]="doubleHeaders" [items]="doubleWaiting"></app-table>
-  </div>
-</div>
+    <ng-container *ngIf="singleStarting.length > 0">
+      <h2>Einzel</h2>
+      <form class="mb-1" [formGroup]="singleForm">
+        <div class="form-group">
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="fieldType" id="singleMaleRadio"
+                   [value]="FieldType.MALE" formControlName="fieldType"
+                   (change)="resetSingleDivisionName();singleFilter()">
+            <label class="form-check-label" for="singleMaleRadio">Herren</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="fieldType" id="singleFemaleRadio"
+                   [value]="FieldType.FEMALE" formControlName="fieldType"
+                   (change)="resetSingleDivisionName();singleFilter()">
+            <label class="form-check-label" for="singleFemaleRadio">Damen</label>
+          </div>
+        </div>
+        <div class="form-inline form-group mr-3">
+          <label for="singleDivisions" class="mr-1">Spielklasse:</label>
+          <select id="singleDivisions" class="form-control" (change)="singleFilter()"
+                  formControlName="divisionName">
+            <option *ngFor="let d of singleDivisions">{{d}}</option>
+          </select>
+        </div>
+      </form>
+      <hr align="left" class="w-25"/>
+      <div class="d-flex flex-wrap w-100-sm">
+        <div class="d-flex flex-column mr-1 w-100-sm">
+          <h5>Starterliste</h5>
+          <app-table [headers]="singleHeaders" [items]="singleStarting"></app-table>
+        </div>
+        <div class="d-flex flex-column ml-1 w-100-sm" *ngIf="singleWaiting.length">
+          <h5>Warteliste</h5>
+          <app-table [headers]="singleHeaders" [items]="singleWaiting"></app-table>
+        </div>
+      </div>
+    </ng-container>
 
-<h2 class="mt-3">Mixed</h2>
-<form class="form-inline mb-1" [formGroup]="mixedForm">
-  <div class="form-group">
-    <label for="mixedDivisions" class="mr-1">Spielklasse:</label>
-    <select id="mixedDivisions" class="form-control" (change)="mixedFilter()"
-            formControlName="divisionName">
-      <option *ngFor="let d of mixedDivisions">{{d}}</option>
-    </select>
-  </div>
-</form>
-<hr align="left" class="w-25"/>
-<div class="d-flex flex-wrap w-100-sm">
-  <div class="d-flex flex-column mr-1 w-100-sm">
-    <h5>Starterliste</h5>
-    <app-table [headers]="mixedHeaders" [items]="mixedStarting"></app-table>
-  </div>
-  <div class="d-flex flex-column ml-1 w-100-sm" *ngIf="mixedWaiting.length">
-    <h5>Warteliste</h5>
-    <app-table [headers]="mixedHeaders" [items]="mixedWaiting"></app-table>
-  </div>
-</div>
+    <ng-container *ngIf="doubleStarting.length > 0">
+      <h2 class="mt-3">Doppel</h2>
+      <form class="mb-1" [formGroup]="doubleForm">
+        <div class="form-group">
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="fieldType" id="doubleMaleRadio"
+                   [value]="FieldType.MALE" formControlName="fieldType"
+                   (change)="resetDoubleDivisionName();doubleFilter()">
+            <label class="form-check-label" for="doubleMaleRadio">Herren</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="fieldType" id="doubleFemaleRadio"
+                   [value]="FieldType.FEMALE" formControlName="fieldType"
+                   (change)="resetDoubleDivisionName();doubleFilter()">
+            <label class="form-check-label" for="doubleFemaleRadio">Damen</label>
+          </div>
+        </div>
+        <div class="form-inline form-group mr-3">
+          <label for="doubleDivisions" class="mr-1">Spielklasse:</label>
+          <select id="doubleDivisions" class="form-control" (change)="doubleFilter()"
+                  formControlName="divisionName">
+            <option *ngFor="let d of doubleDivisions">{{d}}</option>
+          </select>
+        </div>
+      </form>
+      <hr align="left" class="w-25"/>
+      <div class="d-flex flex-wrap w-100-sm">
+        <div class="d-flex flex-column mr-1 w-100-sm">
+          <h5>Starterliste</h5>
+          <app-table [headers]="doubleHeaders" [items]="doubleStarting"></app-table>
+        </div>
+        <div class="d-flex flex-column ml-1 w-100-sm" *ngIf="doubleWaiting.length">
+          <h5>Warteliste</h5>
+          <app-table [headers]="doubleHeaders" [items]="doubleWaiting"></app-table>
+        </div>
+      </div>
+    </ng-container>
+
+    <ng-container *ngIf="mixedStarting.length > 0">
+      <h2 class="mt-3">Mixed</h2>
+      <form class="form-inline mb-1" [formGroup]="mixedForm">
+        <div class="form-group">
+          <label for="mixedDivisions" class="mr-1">Spielklasse:</label>
+          <select id="mixedDivisions" class="form-control" (change)="mixedFilter()"
+                  formControlName="divisionName">
+            <option *ngFor="let d of mixedDivisions">{{d}}</option>
+          </select>
+        </div>
+      </form>
+      <hr align="left" class="w-25"/>
+      <div class="d-flex flex-wrap w-100-sm">
+        <div class="d-flex flex-column mr-1 w-100-sm">
+          <h5>Starterliste</h5>
+          <app-table [headers]="mixedHeaders" [items]="mixedStarting"></app-table>
+        </div>
+        <div class="d-flex flex-column ml-1 w-100-sm" *ngIf="mixedWaiting.length">
+          <h5>Warteliste</h5>
+          <app-table [headers]="mixedHeaders" [items]="mixedWaiting"></app-table>
+        </div>
+      </div>
+    </ng-container>
+
+  </ng-container>
+  <p *ngSwitchCase="false">Melde dich jetzt an und sei der/die erste Teilnehmer/in beim Stauseepokal 2020!</p>
+</ng-container>
