--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,6 @@
       <img class="img-fluid" [src]="image" alt="{{image}}"/>
     </ng-template>
   </ngb-carousel>
-  <p>Wir feiern 25-jähriges Jubiläum!</p>
+  <p>Wir feiern unser 25. Jubiläum!</p>
   <button type="button" class="btn btn-lg btn-primary" routerLink="/registration">Feier mit uns</button>
 </div>
